--- a/css/color-work.css
+++ b/css/color-work.css
@@ -68,7 +68,7 @@ nav ul li:hover > ul {
   margin-bottom: 15px;
   padding: 15px 20px;
   margin: 15px 40px;
-  background-color: #5CD641;
+  background-color: #55c63b;
   border-radius: 8px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
   border-left: 4px solid #29A80E;
